--- a/p2/Jenkinsfile
+++ b/p2/Jenkinsfile
@@ -7,5 +7,10 @@ pipeline {
                 echo 'Hello World'
             }
         }
+        stage('Hello(2)') {
+            steps {
+                echo 'Hello World (2)'
+            }
+        }
     }
 }
