--- a/p2/Jenkinsfile
+++ b/p2/Jenkinsfile
@@ -12,5 +12,12 @@ pipeline {
                 echo 'Hello World (2)'
             }
         }
+        stage('Action') {
+            steps {
+                sh '''
+                dir
+                '''
+            }
+        }
     }
 }
