--- a/p2/Jenkinsfile
+++ b/p2/Jenkinsfile
@@ -14,7 +14,9 @@ pipeline {
         }
         stage('Action') {
             steps {
-                sh '''
+                bat '''
+                dir
+                cd ..
                 dir
                 '''
             }
