--- a/p2/Jenkinsfile
+++ b/p2/Jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
         stage('Action') {
             steps {
                 bat '''
-                cd src & job.bat
+                dir
                 '''
             }
         }
